--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,7 +386,7 @@ a:hover, a:focus, a:active {
   margin-bottom: 5px;
 }
 .footer-form .form-control {
-  background: #115c9b;
+  background: #b0accd;
   color: #fff;
   border: 0;
   border-radius: 0;
@@ -396,7 +396,7 @@ a:hover, a:focus, a:active {
 }
 .footer-form .btn-submit {
   border-radius: 0;
-  background: #115c9b;
+  background: #b0accd;
   text-transform: uppercase;
   border: 1px solid #fff;
   -moz-transition: all, 0.5s;
