--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ a:hover, a:focus, a:active {
 .navbar-main {
   margin-bottom: 0;
   color: rgb(8, 3, 15);
-  background: #41B3A3;
+  background: #399d8f;
 }
 .navbar-main .navbar-brand {
   border-bottom: none !important;
@@ -69,7 +69,7 @@ a:hover, a:focus, a:active {
 .navbar-main a.is-active {
   background: none !important;
   color: inherit;
-  border-bottom: 50px solid #41B3A3;
+  border-bottom: 50px solid #399d8f;
 }
 .navbar-main .submenu {
   position: absolute;
