--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2753,7 +2753,7 @@ select[multiple].form-group-lg .form-control {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
@@ -3108,8 +3108,8 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-lg,
 .btn-group-lg > .btn {
-  padding: 10px 16px;
-  font-size: 18px;
+  padding: 30px;
+  font-size: 15px;
   line-height: 1.33;
   border-radius: 6px;
 }
