--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,12 +296,15 @@ padding-left: 150px;
 
 
 
+
 @media only screen and (max-width: 600px) {
 .add75 {
   position:relative; 
   right: -25px;
 }
-
+.textalign {
+  text-align: center;
+}
 }
 .reasons-col {
   position: relative;
