--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,18 @@ a:hover, a:focus, a:active {
   max-width: 100%;
   height: auto;
 }
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.center4 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
 .center2 {
   display: flex;
   justify-content: center;
@@ -411,6 +422,20 @@ padding-left: 150px;
   border-color: #144d7b;
 }
 
+.projectsphotodetails {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.marginwhat {
+  margin-left: auto;
+  margin-right: auto;
+  width: 35%;
+}
+
+.text-align {
+  text-align: center;
+}
 /* Team 
 ================================= */
 .team-member {
@@ -689,6 +714,12 @@ form .alert {
   margin-bottom: 25px;
 }
 
+.title-style-reason {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
 
 .title-style-2 .title-under {
   display: block;
