--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -421,6 +421,8 @@ padding-left: 150px;
   color: #144d7b;
   border-color: #144d7b;
 }
+.split-para      { display:block;margin:10px;}
+.split-para span { display:block;float:right;width:50%;margin-left:10px;}
 
 .projectsphotodetails {
   display: block;
