--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,6 +719,11 @@ form .alert {
   margin-bottom: 25px;
 }
 
+.title-style-2amp {
+  text-transform: uppercase;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
 .title-style-reason {
   text-align: center;
   text-transform: uppercase;
